[gd_scene load_steps=29 format=2]

[ext_resource path="res://popochiu/Rooms/Penthouse/RoomPenthouse.gd" type="Script" id=1]
[ext_resource path="res://popochiu/Rooms/Penthouse/Props/Paragraph/paragraph.png" type="Texture" id=2]
[ext_resource path="res://addons/Popochiu/Engine/Objects/Prop/Prop.tscn" type="PackedScene" id=3]
[ext_resource path="res://popochiu/Rooms/Penthouse/Props/Exit/PropExit.gd" type="Script" id=4]
[ext_resource path="res://popochiu/Rooms/Penthouse/Props/Bg/bg.png" type="Texture" id=5]
[ext_resource path="res://popochiu/Rooms/Penthouse/Props/Exit/exit.png" type="Texture" id=6]
[ext_resource path="res://popochiu/Rooms/Penthouse/Props/Paragraph/PropParagraph.gd" type="Script" id=7]
[ext_resource path="res://popochiu/Rooms/Penthouse/Props/Plants/plant_02.png" type="Texture" id=8]
[ext_resource path="res://popochiu/Rooms/Penthouse/Props/Plants/plant_01.png" type="Texture" id=9]
[ext_resource path="res://popochiu/Characters/Bug/CharacterBug.tscn" type="PackedScene" id=10]
[ext_resource path="res://popochiu/Rooms/Penthouse/Props/Plants/plant_03.png" type="Texture" id=11]
[ext_resource path="res://popochiu/Rooms/Penthouse/Props/Shelf/Shelf.gd" type="Script" id=12]
[ext_resource path="res://popochiu/Rooms/Penthouse/Props/Table/table.png" type="Texture" id=13]
[ext_resource path="res://popochiu/Rooms/Penthouse/Props/Magazine/PropMagazine.gd" type="Script" id=14]
[ext_resource path="res://popochiu/Rooms/Penthouse/Props/Magazine/magazine.png" type="Texture" id=15]
[ext_resource path="res://popochiu/Rooms/Penthouse/Props/Coffee/PropCoffee.gd" type="Script" id=16]
[ext_resource path="res://popochiu/Rooms/Penthouse/Props/Coffee/coffee.png" type="Texture" id=17]
[ext_resource path="res://popochiu/Rooms/Penthouse/Props/Sofa/sofa.png" type="Texture" id=18]
[ext_resource path="res://popochiu/Rooms/Penthouse/Props/Shelf/base.png" type="Texture" id=19]
[ext_resource path="res://popochiu/Rooms/Penthouse/Props/VaseYellow/vase_yellow.png" type="Texture" id=20]
[ext_resource path="res://popochiu/Rooms/Penthouse/Props/Shelf/body.png" type="Texture" id=21]
[ext_resource path="res://popochiu/Rooms/Penthouse/Props/VaseGreen/vase_green.png" type="Texture" id=22]
[ext_resource path="res://popochiu/Rooms/Penthouse/Props/VaseRed/vase_red.png" type="Texture" id=24]
[ext_resource path="res://popochiu/Rooms/Penthouse/Props/VaseYellow/PropVase.gd" type="Script" id=25]
[ext_resource path="res://popochiu/Rooms/Penthouse/Props/VaseBlue/vase_blue.png" type="Texture" id=26]
[ext_resource path="res://popochiu/Rooms/Penthouse/Props/Shelf/shelf.png" type="Texture" id=27]
[ext_resource path="res://secrets/Secret.gd" type="Script" id=28]

[sub_resource type="NavigationPolygon" id=1]
vertices = PoolVector2Array( -37, 15, 102, 9, 165, 10, 82, 19, 42, 18, 23, 4, -41, 7, 169, 32, 267, 37, 213, 74, -47, 52, 73, 36, -231, 70, -306, 37, -286, 20, -198, 12, -198, 40, -122, 36, 95, 31, 93, 23, -54, 1, -83, 9, -125, 7, -96, 15, -88, 25, -59, 25, 18, 26, 20, 20, 29, 32 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4 ), PoolIntArray( 5, 1, 0, 6 ), PoolIntArray( 7, 8, 9, 10, 11 ), PoolIntArray( 12, 13, 14, 15, 16 ), PoolIntArray( 10, 12, 16, 17 ), PoolIntArray( 2, 7, 18, 19 ), PoolIntArray( 20, 5, 6 ), PoolIntArray( 20, 6, 21, 22 ), PoolIntArray( 22, 21, 23 ), PoolIntArray( 17, 22, 23, 24 ), PoolIntArray( 10, 17, 24, 25 ), PoolIntArray( 26, 10, 25, 0, 27 ), PoolIntArray( 2, 19, 3 ), PoolIntArray( 0, 4, 27 ), PoolIntArray( 10, 26, 28 ), PoolIntArray( 10, 28, 11 ), PoolIntArray( 7, 11, 18 ) ]
outlines = [ PoolVector2Array( 267, 37, 169, 32, 165, 10, 102, 9, 23, 4, -54, 1, -125, 7, -122, 36, -198, 40, -198, 12, -286, 20, -306, 37, -231, 70, -47, 52, 213, 74 ), PoolVector2Array( 18, 26, 29, 32, 73, 36, 95, 31, 93, 23, 82, 19, 42, 18, 20, 20 ), PoolVector2Array( -96, 15, -88, 25, -59, 25, -37, 15, -41, 7, -83, 9 ) ]

[node name="RoomPenthouse" type="Node2D"]
script = ExtResource( 1 )
script_name = "Penthouse"
limit_left = -320.0
limit_right = 320.0
limit_top = -90.0
limit_bottom = 90.0

[node name="Props" type="Node2D" parent="."]

[node name="Bg" parent="Props" instance=ExtResource( 3 )]
description = "Bg"
clickable = false
cursor = 10
script_name = "Bg"
texture = ExtResource( 5 )

[node name="Exit" parent="Props" instance=ExtResource( 3 )]
position = Vector2( 254, 26 )
script = ExtResource( 4 )
description = "Exit"
baseline = 51
walk_to_point = Vector2( -20, 24 )
cursor = 10
script_name = "Exit"
texture = ExtResource( 6 )

[node name="BaselineHelper" parent="Props/Exit" index="0"]
position = Vector2( 0, 51 )

[node name="WalkToHelper" parent="Props/Exit" index="1"]
position = Vector2( -20, 24 )

[node name="Sprite" parent="Props/Exit" index="2"]
texture = ExtResource( 6 )

[node name="CollisionPolygon2D" parent="Props/Exit" index="3"]
polygon = PoolVector2Array( 13, 18, 39, 45, -22, 45 )

[node name="Paragraph" parent="Props" instance=ExtResource( 3 )]
position = Vector2( 220, -17 )
script = ExtResource( 7 )
description = "Paragraph"
walk_to_point = Vector2( -4, 54 )
cursor = 1
script_name = "Paragraph"
texture = ExtResource( 2 )

[node name="WalkToHelper" parent="Props/Paragraph" index="1"]
position = Vector2( -4, 54 )

[node name="Sprite" parent="Props/Paragraph" index="2"]
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" parent="Props/Paragraph" index="3"]
polygon = PoolVector2Array( -28, -37, 32, -33, 28, 38, -32, 35 )

[node name="Sofa" parent="Props" instance=ExtResource( 3 )]
position = Vector2( -68, -1 )
description = "Sofa"
clickable = false
baseline = 17
cursor = 10
script_name = "Sofa"
texture = ExtResource( 18 )

[node name="Plant01" parent="Props" instance=ExtResource( 3 )]
position = Vector2( 141, -11 )
clickable = false
baseline = 29
cursor = 10
script_name = "Plant01"
texture = ExtResource( 9 )

[node name="Plant02" parent="Props" instance=ExtResource( 3 )]
position = Vector2( 100, 41 )
clickable = false
baseline = 12
cursor = 10
script_name = "Plant01"
texture = ExtResource( 8 )

[node name="Plant03" parent="Props" instance=ExtResource( 3 )]
position = Vector2( -87, 22 )
clickable = false
baseline = 20
cursor = 10
script_name = "Plant01"
texture = ExtResource( 11 )

[node name="Table" parent="Props" instance=ExtResource( 3 )]
position = Vector2( 57, 14 )
description = "Table"
clickable = false
baseline = 6
cursor = 10
script_name = "Table"
texture = ExtResource( 13 )

[node name="Magazine" parent="Props" instance=ExtResource( 3 )]
position = Vector2( 65, 5 )
script = ExtResource( 14 )
description = "Magazine"
baseline = 6
walk_to_point = Vector2( 8, 9 )
cursor = 10
script_name = "Magazine"
texture = ExtResource( 15 )

[node name="BaselineHelper" parent="Props/Magazine" index="0"]
position = Vector2( 0, 6 )

[node name="WalkToHelper" parent="Props/Magazine" index="1"]
position = Vector2( 8, 9 )

[node name="Sprite" parent="Props/Magazine" index="2"]
texture = ExtResource( 15 )

[node name="CollisionPolygon2D" parent="Props/Magazine" index="3"]
polygon = PoolVector2Array( -10, -3, -2, -7, 10, -1, 10, 2, 1, 7, -10, 1 )

[node name="Coffee" parent="Props" instance=ExtResource( 3 )]
position = Vector2( 47, 9 )
script = ExtResource( 16 )
description = "Coffee"
baseline = 4
walk_to_point = Vector2( -9, 28 )
cursor = 10
script_name = "Coffee"
texture = ExtResource( 17 )

[node name="BaselineHelper" parent="Props/Coffee" index="0"]
position = Vector2( 0, 4 )

[node name="WalkToHelper" parent="Props/Coffee" index="1"]
position = Vector2( -9, 28 )

[node name="Sprite" parent="Props/Coffee" index="2"]
texture = ExtResource( 17 )

[node name="CollisionPolygon2D" parent="Props/Coffee" index="3"]
polygon = PoolVector2Array( -6, -1, -1, -5, 5, -1, 3, 3, -4, 3 )

[node name="Shelf1" parent="Props" instance=ExtResource( 3 )]
position = Vector2( -282, 16 )
script = ExtResource( 12 )
description = "Shelf A"
baseline = 8
walk_to_point = Vector2( 0, 20 )
cursor = 10
script_name = "Shelf"
texture = ExtResource( 27 )
balance_config = [ 2.0, -0.6, -0.5, -0.9 ]
offset_balance = 5

[node name="BaselineHelper" parent="Props/Shelf1" index="0"]
position = Vector2( 0, 8 )

[node name="WalkToHelper" parent="Props/Shelf1" index="1"]
position = Vector2( 0, 20 )

[node name="Sprite" parent="Props/Shelf1" index="2"]
visible = false
texture = ExtResource( 27 )

[node name="ShelfBase" type="Sprite" parent="Props/Shelf1"]
position = Vector2( -10, 5 )
texture = ExtResource( 19 )
centered = false

[node name="ShelfBody" type="Sprite" parent="Props/Shelf1"]
position = Vector2( -8, -18 )
texture = ExtResource( 21 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 19, 26 )
region_filter_clip = true

[node name="CollisionPolygon2D" parent="Props/Shelf1" index="5"]
position = Vector2( 1, 2.14577e-06 )

[node name="Vase" parent="Props/Shelf1" instance=ExtResource( 3 )]
position = Vector2( 1, -24 )
script = ExtResource( 25 )
baseline = 39
walk_to_point = Vector2( -280, 62 )
cursor = 10
script_name = "VaseYellow"
texture = ExtResource( 20 )

[node name="BaselineHelper" parent="Props/Shelf1/Vase" index="0"]
position = Vector2( 0, 39 )

[node name="WalkToHelper" parent="Props/Shelf1/Vase" index="1"]
position = Vector2( -280, 62 )

[node name="Sprite" parent="Props/Shelf1/Vase" index="2"]
texture = ExtResource( 20 )

[node name="CollisionPolygon2D" parent="Props/Shelf1/Vase" index="3"]
polygon = PoolVector2Array( -3, -10, 2, -10, 9, 2, 5, 9, -6, 9, -9, 3 )

[node name="Tween" type="Tween" parent="Props/Shelf1"]

[node name="Shelf2" parent="Props" instance=ExtResource( 3 )]
position = Vector2( -259, 14 )
script = ExtResource( 12 )
description = "Shelf"
baseline = 8
walk_to_point = Vector2( 0, 20 )
cursor = 10
script_name = "Shelf"
texture = ExtResource( 27 )
balance_config = [ -0.5, 3.0, -0.4, -0.4 ]
weight_index = 1
offset_balance = 10

[node name="BaselineHelper" parent="Props/Shelf2" index="0"]
position = Vector2( 0, 8 )

[node name="WalkToHelper" parent="Props/Shelf2" index="1"]
position = Vector2( 0, 20 )

[node name="Sprite" parent="Props/Shelf2" index="2"]
visible = false
texture = ExtResource( 27 )

[node name="ShelfBase" type="Sprite" parent="Props/Shelf2"]
position = Vector2( -10, 5 )
texture = ExtResource( 19 )
centered = false

[node name="ShelfBody" type="Sprite" parent="Props/Shelf2"]
position = Vector2( -8, -18 )
texture = ExtResource( 21 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 19, 26 )
region_filter_clip = true

[node name="CollisionPolygon2D" parent="Props/Shelf2" index="5"]
position = Vector2( 1, -9.53674e-07 )

[node name="Vase" parent="Props/Shelf2" instance=ExtResource( 3 )]
position = Vector2( 1, -24 )
script = ExtResource( 25 )
baseline = 39
walk_to_point = Vector2( -253, 60 )
cursor = 10
script_name = "VaseBlue"
texture = ExtResource( 26 )
weight_index = 1
current_vase = "VaseBlue"

[node name="BaselineHelper" parent="Props/Shelf2/Vase" index="0"]
visible = true
position = Vector2( 0, 39 )

[node name="WalkToHelper" parent="Props/Shelf2/Vase" index="1"]
visible = true
position = Vector2( -253, 60 )

[node name="Sprite" parent="Props/Shelf2/Vase" index="2"]
texture = ExtResource( 26 )

[node name="CollisionPolygon2D" parent="Props/Shelf2/Vase" index="3"]
polygon = PoolVector2Array( -3, -10, 2, -10, 9, 2, 5, 9, -6, 9, -9, 2 )

[node name="Tween" type="Tween" parent="Props/Shelf2"]

[node name="Shelf3" parent="Props" instance=ExtResource( 3 )]
position = Vector2( -236, 12 )
script = ExtResource( 12 )
description = "Shelf"
baseline = 8
walk_to_point = Vector2( 0, 20 )
cursor = 10
script_name = "Shelf"
texture = ExtResource( 27 )
balance_config = [ -0.8, -1.1, 1.5, -1.2 ]
weight_index = 2
offset_balance = -5

[node name="BaselineHelper" parent="Props/Shelf3" index="0"]
position = Vector2( 0, 8 )

[node name="WalkToHelper" parent="Props/Shelf3" index="1"]
position = Vector2( 0, 20 )

[node name="Sprite" parent="Props/Shelf3" index="2"]
visible = false
texture = ExtResource( 27 )

[node name="ShelfBase" type="Sprite" parent="Props/Shelf3"]
position = Vector2( -10, 5 )
texture = ExtResource( 19 )
centered = false

[node name="ShelfBody" type="Sprite" parent="Props/Shelf3"]
position = Vector2( -8, -18 )
texture = ExtResource( 21 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 19, 26 )
region_filter_clip = true

[node name="CollisionPolygon2D" parent="Props/Shelf3" index="5"]
position = Vector2( 1, 0 )

[node name="Vase" parent="Props/Shelf3" instance=ExtResource( 3 )]
position = Vector2( 1, -24 )
script = ExtResource( 25 )
baseline = 39
walk_to_point = Vector2( -232, 58 )
cursor = 10
script_name = "VaseGreen"
texture = ExtResource( 22 )
weight_index = 2
current_vase = "VaseGreen"

[node name="BaselineHelper" parent="Props/Shelf3/Vase" index="0"]
position = Vector2( 0, 39 )

[node name="WalkToHelper" parent="Props/Shelf3/Vase" index="1"]
position = Vector2( -232, 58 )

[node name="Sprite" parent="Props/Shelf3/Vase" index="2"]
texture = ExtResource( 22 )

[node name="CollisionPolygon2D" parent="Props/Shelf3/Vase" index="3"]
polygon = PoolVector2Array( -3, -10, 1, -10, 9, 2, 4, 10, -7, 10, -9, 2 )

[node name="Tween" type="Tween" parent="Props/Shelf3"]

[node name="Shelf4" parent="Props" instance=ExtResource( 3 )]
position = Vector2( -213, 10 )
script = ExtResource( 12 )
description = "Shelf"
baseline = 16
walk_to_point = Vector2( 0, 20 )
cursor = 10
script_name = "Shelf"
texture = ExtResource( 27 )
balance_config = [ -0.7, -1.3, -0.6, 2.5 ]
weight_index = 3
offset_balance = -10

[node name="BaselineHelper" parent="Props/Shelf4" index="0"]
position = Vector2( 0, 16 )

[node name="WalkToHelper" parent="Props/Shelf4" index="1"]
position = Vector2( 0, 20 )

[node name="ShelfBase" type="Sprite" parent="Props/Shelf4"]
position = Vector2( -10, 5 )
texture = ExtResource( 19 )
centered = false

[node name="ShelfBody" type="Sprite" parent="Props/Shelf4"]
position = Vector2( -8, -18 )
texture = ExtResource( 21 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 19, 26 )
region_filter_clip = true

[node name="Sprite" parent="Props/Shelf4" index="4"]
visible = false
texture = ExtResource( 27 )

[node name="CollisionPolygon2D" parent="Props/Shelf4" index="5"]
position = Vector2( 1, 1 )

[node name="Vase" parent="Props/Shelf4" instance=ExtResource( 3 )]
position = Vector2( 1, -24 )
script = ExtResource( 25 )
baseline = 39
walk_to_point = Vector2( -210, 56 )
cursor = 10
script_name = "VaseRed"
texture = ExtResource( 24 )
weight_index = 3
current_vase = "VaseRed"

[node name="BaselineHelper" parent="Props/Shelf4/Vase" index="0"]
position = Vector2( 0, 39 )

[node name="WalkToHelper" parent="Props/Shelf4/Vase" index="1"]
position = Vector2( -210, 56 )

[node name="Sprite" parent="Props/Shelf4/Vase" index="2"]
texture = ExtResource( 24 )

[node name="CollisionPolygon2D" parent="Props/Shelf4/Vase" index="3"]
polygon = PoolVector2Array( -3, -10, 2, -10, 9, 2, 5, 10, -6, 10, -9, 2 )

[node name="Tween" type="Tween" parent="Props/Shelf4"]

[node name="Hotspots" type="Node2D" parent="."]

[node name="Regions" type="Node2D" parent="."]

[node name="Points" type="Node2D" parent="."]

[node name="WalkableAreas" type="Node2D" parent="."]
visible = false

[node name="Navigation2D" type="Navigation2D" parent="WalkableAreas"]

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="WalkableAreas/Navigation2D"]
navpoly = SubResource( 1 )

[node name="Characters" type="Node2D" parent="."]

[node name="CharacterBug" parent="Characters" instance=ExtResource( 10 )]
position = Vector2( -188, 50 )

[node name="Secret" type="Node" parent="."]
script = ExtResource( 28 )

[editable path="Props/Exit"]
[editable path="Props/Paragraph"]
[editable path="Props/Magazine"]
[editable path="Props/Coffee"]
[editable path="Props/Shelf1"]
[editable path="Props/Shelf1/Vase"]
[editable path="Props/Shelf2"]
[editable path="Props/Shelf2/Vase"]
[editable path="Props/Shelf3"]
[editable path="Props/Shelf3/Vase"]
[editable path="Props/Shelf4"]
[editable path="Props/Shelf4/Vase"]
